# knowledge-project

./: .env.example  .gitignore  CHANGELOG.md  Handover_Instruction.md  MEMORY.md  README.md  build_graph.py  cli.py  connect.py  db.py  guidance.py  ingest.py  install.sh  llm_client.py  mcp_server.py  mem_cli.py  memzero.py  package.json  parsers.py  plan_schema.py  postinstall.js  pyproject.toml  query.py  requirements.txt  setup.sh  setup_cmd.py  synthesis.py  transcript_usage.py
.github/workflows/: ci.yml
docs/: implementation-plan-v0.6.md  implementation-plan-v0.7.md  memory-protocol.md
docs/teaching/: prompt-caching-and-context-assembly.md  why-cached-tokens-cost-less.md
hooks/: _hook_common.py  psyche_extract.py  psyche_prompt_submit.py  psyche_session_start.py  psyche_stop.py
psyche/domain_packs/: business.yaml  career.yaml  general.yaml  happiness.yaml  health.yaml  ideation.yaml  wealth.yaml
tests/: test_cache_stable_injection.py  test_connect.py  test_guidance.py  test_index_sync.py  test_learning_outcomes.py  test_llm_client.py  test_memory.py  test_migrations.py  test_plan_schema.py  test_rag.py  test_stop_gate.py  test_transcript_usage.py
