[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psyche"
version = "0.4.0"
description = "Local-first RAG and Model Context Protocol (MCP) memory layer for coding assistants (Cursor, Claude, Antigravity) with SQLite hybrid search and cross-encoder reranking"
readme = "README.md"
keywords = [
    "mcp",
    "model-context-protocol",
    "cursor-mcp",
    "claude-mcp",
    "local-first",
    "rag",
    "sqlite-vec",
    "hybrid-search",
    "reranker",
    "persistent-memory",
    "agentic-memory",
    "obsidian-notes",
    "second-brain"
]
authors = [
    { name = "Nam-Aniket" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "numpy>=1.24.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.40",
    "fastembed>=0.3.0",
    "sqlite-vec>=0.1.9",
    "usearch>=2.25.3",
    "flashrank>=0.2.10"
]
requires-python = ">=3.9"

[project.scripts]
psyche = "cli:main"

[tool.setuptools]
py-modules = ["cli", "db", "parsers", "ingest", "query", "llm_client", "build_graph", "mcp_server"]
